facebook login basic setup

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,8 @@ API_BASE=http://localhost:4000/api/v1
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GOOGLE_SCOPE=email,profile
+
+# facebook credentials
+FACEBOOK_CLIENT_ID=
+FACEBOOK_CLIENT_SECRET=
+FACEBOOK_SCOPE=email,public_profile
