added prisma and created user model

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,18 @@ GOOGLE_SCOPE=email,profile
 FACEBOOK_CLIENT_ID=
 FACEBOOK_CLIENT_SECRET=
 FACEBOOK_SCOPE=email,public_profile
+
+# JWT credentials
+JWT_SECRET=
+JWT_REFRESH_SECRET=
+JWT_EXPIRES=20s # 10s = 10 seconds, 10m = 10 minutes, 10h = 10 hours, 10d = 10 days etc
+JWT_REFRESH_EXPIRES=10h # 10s = 10 seconds, 10m = 10 minutes, 10h = 10 hours, 10d = 10 days etc
+JWT_ISSUER=http://localhost:4000
+
+# database details
+DB_NAME=user_auth
+DB_HOST=localhost
+DB_USER=root
+DB_PASS=
+DB_PORT=3306
+DATABASE_URL=mysql://${MYSQL_DB_USER}:${MYSQL_DB_PASS}@${MYSQL_DB_HOST}:${MYSQL_DB_PORT}/${MYSQL_DB_NAME}
